fix: alignment bug in results-messgae

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ h2 {
 #results-message {
     display: flex;
     align-items: center;
-    text-align: center;
+    justify-content: center;
     color: rgb(202, 154, 96);
     height: 6rem;
     font-size: 1rem;
